--- a/submissions/thesis-original/appendices/design/database_schema.tex
+++ b/submissions/thesis-original/appendices/design/database_schema.tex
@@ -1,6 +1,8 @@
 \chapter{Database Schema}
 \label{appendix:database_schema}
 
+This appendix provides the database schema for our system's master relational database. This database is primarily composed of data collected from CrunchBase with the exception of the Patents relation which is collected from PatentsView.
+
 \begin{table}[!htb]
     \tiny
     \centering
@@ -29,6 +31,6 @@ People Descriptions & People UUID, Description \\
 \bottomrule \end{tabular}
     }
     \caption[Relational database schema]{Relational database schema.}
-    \label{tab:design:descriptive_statistics}
+    \label{tab:design:database_schema}
 \end{table}
 
