--- a/submissions/thesis-original/appendices/design/feature_selection.tex
+++ b/submissions/thesis-original/appendices/design/feature_selection.tex
@@ -38,13 +38,9 @@ Entrepeneurship revolves around opportunity discovery and realisation \cite{shan
 
 \begin{description}
 
-\item[Social Media]
+\item[Social Influence] %Rewrite to also include events
 
 Startups use social media to communicate with other parties including their customers, potential customers, the media, potential employees, and potential investors. Social media activity can be proxy for a startup's social influence. Startups use different social media platforms for different purposes. Presence and engagement (e.g. number of followers, number of likes, number of posts) on Facebook and Twitter are predictive of startup investment success \cite{cheng2016,beckwith2016}. These platforms are likely to capture customer or potential customer interactions, which is an indicator of market adoption. In addition, the number of followers on AngelList predicts startup investment success \cite{an2015}, probably because it captures potential employees and investors' interest.
-
-\item[Event Influence]
-
-%TODO
 
 \item[Strategic Alliances]
 
