--- a/submissions/thesis-original/appendices/discussion/case_studies.tex
+++ b/submissions/thesis-original/appendices/discussion/case_studies.tex
@@ -1,11 +1,13 @@
 \chapter{Case Studies}
 \label{appendix:case_studies}
 
+This appendix provides four case studies that highlight the nuances in the performance of our \gls{vc} investment screening system. In particular, they highlight the limitations of our system with respect to understanding unsuccessful exits and funding rounds (e.g. down-rounds, acqui-hires).
+
 \begin{table}[!htb]
     \centering
-    \scalebox{0.9}{\input{../tables/evaluation/example_predictions}}
+    \scalebox{0.9}{\input{../tables/discussion/example_predictions}}
     \caption[Company profiles and predictions]{Company profiles and predictions.}
-    \label{tab:evaluation:example_predictions}
+    \label{tab:discussion:example_predictions}
 \end{table}
 
 \begin{enumerate}
