--- a/submissions/thesis-original/conclusions/conclusions.tex
+++ b/submissions/thesis-original/conclusions/conclusions.tex
@@ -4,40 +4,41 @@
  \chapter{Conclusions}
  \label{chap:conclusions}
 
-Our project's aim was to produce a \gls{vc} investment screening system that is practical, robust and versatile. Our system uses online data sources and machine learning to identify startups that are likely to raise additional funding, become acquired or have an \gls{ipo} (or some combination therof) in a given period of time. While this is a challenging problem even for experienced \gls{vc} investors, our system achieved results that have practical application for \gls{vc} firms.
+Our project's aim was to produce an investment screening system suitable for use in the \gls{vc} industry. Our system identifies startups that are likely to raise additional funding, become acquired or have an \gls{ipo} (or some combination thereof) in a given period. While this is a challenging task, our system achieved results that have practical application for \gls{vc} firms.
 
 \section{Evaluation of Criteria}
 
+We evaluated our system against three criteria: practicality, robustness, and versatility.
+
 \subsection{Practicality}
 
-Our system intends to replace manual investment screening (referral, Google search, industry papers, and manual search of startup databases). Our automated system should be more efficient than these methods because it requires less human input. We also evaluated our system's efficiency based on dataset size and time profile. An indicative implementation of our system takes 46 hours to run, which is reasonable for a process that is not time-sensitive in this industry. The majority of this time is due to the pipeline optimisation process. However, when placed into production, this could be run less frequently with minimal reduction in performance.
+Investment screening involves considerable time and effort for \gls{vc} firms~\cite{fried1994}. We evaluated whether it is practical for our system to replace existing screening processes (e.g. Google search, industry papers, databases). Our automated system is more efficient than these methods because it requires minimal user input. Our system takes 46 hours to run, which is reasonable because screening is not time-sensitive in this industry. The majority of the time taken by our system is due to pipeline optimisation. In the future, we could develop a scheduling system that runs time-intensive components (like pipeline optimisation) less frequently with minimal reduction in performance.
 
 \subsection{Robustness}
 
-Our system must be robust in its performance with respect to time so investors can rely on its predictions. The \gls{vc} industry is concerned that predictive models trained on historical data will not accurately predict future trends and activity. This has been identified as a key barrier to the adoption of automated systems by the \gls{vc} industry \cite{stone2014}. We evaluated our system across a number of historical datasets, forecast windows, and even multiple evaluation metrics. We found variance across all evaluation metrics to be very low, with slightly more variance over shorter forecast windows. When we explored the feature weights for each model developed on different historical datasets, we found only slight variance. This suggests that our system produces highly robust models, suitable for forward-looking investment screening.
-
-%Robust to quantum and type of data
-Our system is relatively robust to dataset size, because it optimises the classification pipeline based on the datasets available. In some cases, our system could use smaller training sets without significant reduction in predictive power. However, our system's ability to use smaller training sets was related to the length of the desired forecast window, and the breadth of the target outcome.
+\Gls{vc} firms are concerned that investment models trained on historical data will not accurately predict future trends and activity~\cite{stone2014}. We evaluated whether our system's predictions are robust over time. We found that training our system on different historical datasets had a minimal effect on the system's performance and the models it generated. This finding suggests that \gls{vc} firms should be able to act on predictions made by our system. Our system is also robust to dataset size because it chooses an optimal classification pipeline based on the dataset available. It is likely that our system will continue to improve in performance as its data sources grow.
 
 \subsection{Versatility}
 
-Our system must be consistently accurate at identifying a variety of high-potential investment candidates. Unlike previous studies, we evaluated the systems' predictive power across a large problem domain, including predicting over different forecast windows (e.g. 2-4 years), for target companies at different developmental stages (e.g. Seed, Series A etc.), and for different target outcomes (e.g. predicting additional funding rounds). Forecast window has an impact on our system's performance. Our system produced F1 Scores of 0.36, 0.48 and 0.55 for forecast windows of 2, 3 and 4 years. Our system's performance has a positive relationship with developmental stage, producing F1 Scores ranging from 0.33 for Pre-Seed companies through to 0.62 for Series C companies. Finally, our system varies in its performance at predicting target outcomes, producing F1 Scores ranging from 0.51 for predicting additional funding through to 0.24 for predicting an \gls{ipo}. Where comparable, our system produced better or similar results to previous studied systems.
+\Gls{vc} firms vary in the investments they make according to their interests, the lifecycles of their funds, and the portfolios that they hold~\cite{gompers1995}. A \gls{vc} investment screening system should be versatile in its ability to work across these variables. We evaluated our system's ability to perform across a large domain of investment prediction tasks. Tasks included predicting different target outcomes (e.g. \gls{ipo}, acquisition) for companies at different developmental stages (e.g. Seed, Series A, etc.) over different forecast windows (e.g. 2--4 years). These variables have significant effects on our system's performance and the models it generates. Where comparable, our system produced better or similar results to previous attempts.
 
 \section{Future Work}
 
-\subsection{Automation \& User Interface}
+We identified several areas of further investigation that build on our work.
 
-Our current implementation of the system is near-autonomous, but still requires manual scheduling. Future work could prepare this system for use in industry by developing a set-and-forget task scheduling system that optimises when different components of the system are run to ensure that the performance of the system is always near-optimal. This task scheduling system would pair well with an improved CrunchBase data collection system that connects directly to the REST API rather than downloading CSV-dumps. The REST API collector could indicate how many changes have been made in the dataset since the last data collection, and feed that information to the task scheduler. This would allow the task scheduler to run an optimisation process that maximises performance improvement against number of dataset changes and time taken. In addition to task scheduling and API-based data collection, our system requires a basic user interface before it can be commercialised, allowing users to search through the database, filter based on the results of the models, and change configuration of the system.
+\subsection{Systems Integration}
 
-\subsection{Feature Set Improvement}
+Our system was designed to meet criteria critical to \gls{vc} firms, but we must now assess how to integrate our software into their systems. First, we hope to conduct a use case study with one or more \gls{vc} firms. This study will inform the commercialisation of our system. One potential area of further development is an autonomous system that schedules the system components to ensure consistent near-optimal performance. This task scheduling system would pair well with an improved CrunchBase data collection system that connects to the CrunchBase API rather than downloading CSV-dumps. An API connector would allow the task scheduler to run an optimisation process that maximises performance improvement against dataset changes and time taken.
 
-While this project was likely the most comprehensive study of startup investment performance in the literature with respect to diversity of features analysed, there are improvements to our feature set to be made in future work. In our implementation of the system, we were unable to source data to represent all the factors of our conceptual framework. Missing factors included: media coverage, social media influence, strategic alliances and financial performance. These features have all previously been indicated to be associated with startup investment performance. In addition, the nature of our feature set was largely homogeneous -- mostly basic features (e.g. number of funding rounds). We expect that future work that extends our feature set by including semantic text features (e.g. keyword analysis from patents, sentiment analysis from media coverage) and social network features (e.g. co-investment networks, spheres of influence) could lead to better startup investment prediction. Finally, it would be interesting to look further at the temporal relationships between different startup activities (e.g. media coverage, funding rounds, \gls{ipo}s etc.) and how this chain of activity might predict investment success (e.g. Markov networks).
+\subsection{Feature Improvement}
+
+This project provided a comprehensive study of features that predict startup performance, but there remain improvements we can make to the feature set. Some factors from our framework were not represented or supported by few features: media coverage, strategic alliances, financial performance, social influence, and industry performance. We expect their inclusion to improve our predictions. We also expect that more complex features like semantic text analysis (e.g. keyword analysis from patents, sentiment analysis from media) and social network analysis (e.g. co-investment networks, spheres of influence) will improve our predictions. Finally, we hope to explore whether temporal relationships between startup activities (e.g. media coverage, funding rounds, \gls{ipo}, etc.) might also improve performance.
 
 \section{Summary}
 
-In this project we set out to create a \gls{vc} investment screening system that met our criteria of practicality, robustness, and versatility, and we have indeed created such a system. The work required to achieve this project's goals was extensive, from reviewing the state of \gls{vc} theory and machine learning as applied to this field, to developing systems that collect and manipulate data from CrunchBase and PatentsView, to developing an adaptive classification pipeline process, and finally performing experiments that validate the ability of the system to meet our aforementioned criteria.
+We set out to create a \gls{vc} investment screening system that met criteria of practicality, robustness, and versatility, and we have indeed created such a system. The work required to achieve this project's goals was extensive, from reviewing the state of \gls{vc} theory and data mining, to developing systems that collect data from CrunchBase and PatentsView, to developing an adaptive classification pipeline process, and finally performing experiments that validate the ability of the system to meet our criteria above.
 
-This project makes three primary contributions with implications for industry and research. First, our system is designed for the \gls{vc} industry: it is near-autonomous, robust to changes in dataset and prediction task, and uses diverse features collected from large public online databases. Second, our system's performance is not only better or comparable to previous studies, it also addresses a far larger domain of investment prediction tasks with respect to forecast window, developmental stage and target outcome. Third, this project contributes an empirical study of models of startup investment performance more comprehensive than any found in the literature. Ultimately, this project makes steps towards automation in the \gls{vc} industry.
+This project makes three primary contributions with implications for industry and research. First, we designed our system for the \gls{vc} industry: it is near-autonomous, robust to changes in dataset and prediction task, and uses a comprehensive feature set collected from large public online databases. Second, our system's performance is not only better or comparable to previous studies, but it also addresses a far larger domain of investment prediction tasks with respect to forecast window, developmental stage and target outcome. Third, this project contributes an empirical study of models of startup investment performance more comprehensive than any found in the literature. Ultimately, this project makes steps towards automation in the \gls{vc} industry.
 
  \ifcsdef{mainfile}{}{\printbibliography}
 \end{document}
