--- a/submissions/thesis-original/introduction/introduction.tex
+++ b/submissions/thesis-original/introduction/introduction.tex
@@ -4,31 +4,33 @@
 \chapter{Introduction}
 \label{chap:introduction}
 
-\Gls{vc} is financial capital provided to early-stage, high-potential, high-growth companies (startups). \Gls{vc} firms have funded many successful companies, such as Google, Apple, Microsoft and Alibaba. Unlike investors in the public markets, \gls{vc} firms often take a more active role in managing their investments, providing expertise and advice in both managerial and technical areas. \Gls{vc} firms have two primary roles: as scouts, identifying the potential of new startups, and as coaches, helping startups realise that potential \cite{baum2004}. In these ways, \gls{vc} is often critical to the success of startups, and therfore the commercialisation of new technologies more generally. Adoption of the Internet and inexpensive, ubiquitous computing has transformed the \gls{vc} industry: companies require less funding to launch but more to scale in highly competitive markets \cite{graham2013}. There is now an impetus for \gls{vc} firms to change the way they operate.
+\Gls{vc} is financial capital provided to early-stage, high-potential, high-growth companies (startups). \Gls{vc} firms have funded many successful companies, such as Google, Apple, Microsoft and Alibaba. Unlike investors in the public markets, \gls{vc} firms often take a more active role in managing their investments, providing expertise and advice in both managerial and technical areas. \Gls{vc} firms have two primary roles: as scouts, identifying the potential of startups, and as coaches, helping startups realise that potential~\cite{baum2004}. In these ways, the \gls{vc} industry is critical to the success of startups and the commercialisation of new technologies more generally. Adoption of the Internet and inexpensive, ubiquitous computing has transformed the \gls{vc} industry: companies require less funding to launch but more to scale in highly competitive markets~\cite{graham2013}. There is now an impetus for \gls{vc} firms to change the way they operate.
 
-\Gls{vc} firms face the challenge of choosing a few outstanding investments from a sea of hundreds of thousands of potential opportunities. \Gls{vc} firms seek to make investments in companies that can provide a liquidity event that returns many times their investment value within the time frame of their fund. For startups, a liquidity event (also referred to as an `exit') is either an \gls{ipo} or an acquisition by a larger competitor. Most \gls{vc} firms expect their investments to exit within 3-6 years, in accordance with their fund time-frame \cite{gompers1995}. When compared to public market investors, this is a long-term investment strategy. However, few companies are capable of maturing from early-stage to exit at this pace. In addition, traditional metrics of performance (e.g. cash-flow, earnings) often do not exist or are unclear \cite{shane2002}. In summary, \gls{vc} firms must select from a field of many investment candidates, where little information is available on each of them, and only a few will grow at a fast enough rate to be worthwhile  -- this is why the \gls{vc} investment screening process is considered difficult.
+\Gls{vc} firms face the challenge of choosing a few outstanding investments from a sea of hundreds of thousands of potential opportunities. \Gls{vc} firms seek to make investments in companies that can provide a liquidity event that returns many times their investment value within the time-frame of their fund. For startups, a liquidity event (also referred to as an `exit') is either an \gls{ipo} or an acquisition by a larger competitor. Most \gls{vc} firms expect their investments to exit within 3--8 years, per their fund time-frame~\cite{gompers1995}. When compared to public market investors, this is a long-term investment strategy. However, few companies are capable of maturing from early-stage to exit at this pace. In addition, traditional metrics of performance (e.g. cash-flow, earnings) often do not exist or are unclear~\cite{ahlers2015}. \Gls{vc} firms must select from a field of many investment candidates, where little information is available on each of them, and only a few will grow at a fast enough rate to be worthwhile  --- this is why the \gls{vc} investment screening process is considered difficult.
 
-The \gls{vc} industry requires better systems and processes to efficiently manage labour-intensive tasks like investment origination and screening. Currently, investment opportunities are either referred or identified through technology scans (e.g. Google searches, patent searches). These manual search processes are time-consuming for \gls{vc} firms. Attempts in the literature to solve this problem have three common limitations: small sample size \cite{ahlers2015, gimmon2010, dixon2014, hoenen2014, yu2015, an2015, werth2013, croce2016}, a focus on early-stage investment \cite{beckwith2016, ahlers2015, cheng2016, yuan2016, croce2016, stone2014}, and a basic feature set \cite{ahlers2015, an2015, cheng2016, croce2016, werth2013, gimmon2010}. Although individual studies address some of these limitations, none synthesise the findings into software ready for use in industry. The popularity of online databases like AngelList and CrunchBase , which offer information on startups, investments and investors, is evidence of the \gls{vc} industry's desire for better, more quantitative methods of assessing startup potential \cite{patil2015}. There is preliminary evidence that mining these data sources may address previous limitations and make \gls{vc} investment screening more efficient and effective \cite{stone2014,bhat2011}.
+The \gls{vc} industry is changing and requires better systems and processes to manage labour-intensive tasks like investment origination and screening efficiently. Currently, investment opportunities are either referred through a \gls{vc} firm's networks or identified through technology scans (e.g. Google searches, patent searches). These processes are time-consuming for \gls{vc} firms. Attempts in the literature to solve this problem have three common limitations: small sample size~\cite{ahlers2015, gimmon2010, hoenen2014, yu2015, an2015, werth2013, croce2016}, a focus on early-stage investment~\cite{beckwith2016, ahlers2015, cheng2016, yuan2016, croce2016, stone2014}, and a narrow feature set~\cite{ahlers2015, an2015, cheng2016, croce2016, werth2013, gimmon2010}. Although individual studies address some of these limitations, none synthesise the findings into software ready for use in industry. The popularity of online databases like AngelList and CrunchBase, which offer information on startups, investments and investors, is evidence of the \gls{vc} industry's desire for more quantitative methods of assessing startup potential~\cite{patil2015}. There is preliminary evidence that mining these data sources may address previous limitations~\cite{stone2014,bhat2011}.
 
-We believe it is now possible to address previous limitations in this field and produce an improved \gls{vc} investment screening system. Our system aims to identify startup companies that are likely to raise additional funding, become acquired or have an \gls{ipo} (or some combination therof) in a given period of time. This system may assist \gls{vc} firms to efficiently and effectively screen investment candidates. To be useful in this context, the system must meet the following criteria:
+We believe it is now possible to address previous limitations in this field and produce an improved \gls{vc} investment screening system. Our system aims to identify startup companies that are likely to raise additional funding, become acquired or have an \gls{ipo} (or some combination thereof) in a given period. This system could assist \gls{vc} firms to efficiently screen investment candidates.
+
+We assess our system against the following criteria:
 
 \begin{enumerate}
 
-\item Practicality. The system must be practical for use in the \gls{vc} industry and more efficient to use than manual investment screening. The system should be designed to operate with minimal user input and no assumed technical expertise. The system should also be designed to run in reasonable time.
+\item Practicality. The system must be more efficient to use than manual investment screening. The system should be designed to operate with minimal user input and no assumed technical expertise. The system should also be designed to run in reasonable time.
 
 \item Robustness. The system must be robust to changes over time. The system should be designed to have minimal variance in performance when training on datasets from different times so investors can trust its ability to make future-looking predictions. The system should also be designed to adapt to the quantum and type of data available from data sources over time.
 
-\item Versatility. The system must be versatile in its ability to address a large domain of investment prediction tasks. The system should be designed to make accurate predictions for companies of different developmental stages (e.g. Seed, Series A), for different target outcomes (e.g. Acquisition, IPO) across different forecast windows (e.g. exit in two years, exit in four years).
+\item Versatility. The system must be able to address a large domain of investment prediction tasks. The system should be designed to make accurate predictions for companies of different developmental stages (e.g. Seed, Series A), for different target outcomes (e.g. Acquisition, IPO) across different forecast windows (e.g. exit in two years, exit in four years).
 
 \end{enumerate}
 
-This thesis is organised as follows:
+We organise the thesis as follows:
 
 \begin{itemize}
 
-\item Chapter 2: Literature Review. We review the theoretical background of startup performance and \gls{vc} investment and evaluate previous efforts in developing technologies for use in \gls{vc} investment screening systems.
+\item Chapter 2: Literature Review. We review the theoretical background of startup performance and \gls{vc} investment and evaluate previous attempts to develop technologies for use in \gls{vc} investment screening systems.
 
-\item Chapter 3: Design. We outline the design of our system architecture, propose a framework that guides our feature and data source selection, and describe the development of our adaptive classification pipeline process.
+\item Chapter 3: Design. We outline the methodology used to design our \gls{vc} investment screening system.
 
 \item Chapter 4: Evaluation. We perform a series of experiments to evaluate our system against three criteria: practicality, robustness and versatility.
 
