--- a/submissions/thesis-original/references/primary.bib
+++ b/submissions/thesis-original/references/primary.bib
@@ -1,7 +1,15 @@
+@phdthesis{chok2010,
+  title={Pearson's versus Spearman's and Kendall's correlation coefficients for continuous data},
+  author={Chok, Nian Shong},
+  year={2010},
+  school={University of Pittsburgh},
+  note = {\url{http://d-scholarship.pitt.edu/8056/1/Chokns_etd2010.pdf}},
+}
+
 @article{gompers1995,
   title={Optimal investment, monitoring, and the staging of venture capital},
   author={Gompers, Paul A},
-  journal={The journal of finance},
+  journal={The Journal of Finance},
   volume={50},
   number={5},
   pages={1461--1489},
@@ -19,7 +27,7 @@
 @inproceedings{davis2006,
   title={The relationship between Precision-Recall and ROC curves},
   author={Davis, Jesse and Goadrich, Mark},
-  booktitle={Proceedings of the 23rd international conference on Machine learning},
+  booktitle={Proceedings of the 23rd International Conference on Machine Learning},
   pages={233--240},
   year={2006},
   organization={ACM}
@@ -35,8 +43,7 @@
 @misc{graham2013,
    author =       {Graham, Paul},
    title =        {Startup Investing Trends},
-   publisher =       {PaulGraham.com},
-   month =        {06},
+   publisher =    {PaulGraham.com},
    year =         {2013},
    howpublished = {\url{http://www.paulgraham.com/invtrend.html/}},
    note =         {Online; accessed 15 May 2017},
@@ -56,7 +63,7 @@
 @article{fried1994,
   title={Toward a model of venture capital investment decision making},
   author={Fried, Vance H and Hisrich, Robert D},
-  journal={Financial management},
+  journal={Financial Management},
   pages={28--37},
   year={1994},
   publisher={JSTOR}
@@ -72,12 +79,13 @@
   year={2011}
 }
 
-@thesis{stone2014,
+@phdthesis{stone2014,
   title={Computational analytics for venture finance},
   author={Stone, Thomas Rory},
   year={2014},
-  type = {Unpublished Ph.D. dissertation},
-  school={UCL (University College London)}
+  school={University College London},
+  note={\url{http://discovery.ucl.ac.uk/1453383/1/Stone-TR-Computational-analytics-for-venture-finance.pdf
+}},
 }
 
 @article{ingley2007,
@@ -335,7 +343,7 @@
 
 @misc{patil2015,
   author =        {Patil, Amruta},
-  editor =        {{Crunchbase.com}},
+  publisher =        {{Crunchbase.com}},
   howpublished =
   {\url{https://info.crunchbase.com/2015/01/crunchbases-venture-program-members-are-making-startup-data-better-than-ever/}},
   month =         {01},
@@ -491,6 +499,8 @@
   title =         {Startup Tribes: Social Network Ties that Support
                    Success in New Firms},
   year =          {2015},
+  howpublished = {\url{http://aisel.aisnet.org/cgi/viewcontent.cgi?article=1081&context=amcis2015
+}},
 }
 
 @inproceedings{an2015,
@@ -500,6 +510,7 @@
   title =         {A Green Flag over Mobile Industry Start-Ups: Human
                    Capital and Past Investors as Investment Signals},
   year =          {2015},
+  pages =           {67},
 }
 
 @article{werth2013,
@@ -514,15 +525,15 @@
   year =          {2013},
 }
 
-@article{croce2016,
-  author =        {Croce, Annalisa and Guerini, Massimiliano and
-                   Ughetto, Elisa},
-  journal =       {Journal of Small Business Management},
-  publisher =     {Wiley Online Library},
-  title =         {Angel Financing and the Performance of High-Tech
-                   Start-Ups},
-  year =          {2016},
+@article {croce2016,
+author = {Croce, Annalisa and Guerini, Massimiliano and Ughetto, Elisa},
+title = {Angel Financing and the Performance of High-Tech Start-Ups},
+journal = {Journal of Small Business Management},
+issn = {1540-627X},
+doi = {10.1111/jsbm.12250},
+year = {2016},
 }
+
 
 @unpublished{shan2014,
   author =        {Shan, Zifei and Cao, Haowen and Lin, Qianying},
@@ -901,7 +912,7 @@
 
 @inproceedings{niculescu2005,
   author =        {Niculescu-Mizil, Alexandru and Caruana, Rich},
-  booktitle =     {Proceedings of the 22nd international conference on
+  booktitle =     {Proceedings of the 22nd International Conference on
                    Machine learning},
   organization =  {ACM},
   pages =         {625--632},
@@ -912,8 +923,8 @@
 
 @inproceedings{rish2001,
   author =        {Rish, Irina},
-  booktitle =     {IJCAI 2001 workshop on empirical methods in
-                   artificial intelligence},
+  booktitle =     {IJCAI 2001 Workshop on Empirical Methods in
+                   Artificial Intelligence},
   number =        {22},
   organization =  {IBM New York},
   pages =         {41--46},
@@ -932,18 +943,13 @@
   year =          {2001},
 }
 
-@incollection{bhat2011,
-  address =       {Berlin},
-  author =        {Bhat, H.S. and Zaelit, D.},
-  booktitle =     {Advances in Knowledge Discovery and Data Mining},
-  editor =        {Huang, J. and Cao, L. and Srivastava, J.},
-  pages =         {399--410},
-  publisher =     {Springer},
-  series =        {Lecture Notes in Computer Science},
-  title =         {Predicting private company exits using qualitative
-                   data},
-  volume =        {6634},
-  year =          {2011},
+@inproceedings{bhat2011,
+  title={Predicting private company exits using qualitative data},
+  author={Bhat, Harish S and Zaelit, Daniel},
+  booktitle={Pacific-Asia Conference on Knowledge Discovery and Data Mining},
+  pages={399--410},
+  year={2011},
+  organization={Springer}
 }
 
 @inproceedings{huang2015,
@@ -960,7 +966,7 @@
 
 @article{cover1967,
   author =        {Cover, Thomas and Hart, Peter},
-  journal =       {IEEE transactions on information theory},
+  journal =       {IEEE Transactions on Information Theory},
   number =        {1},
   pages =         {21--27},
   publisher =     {IEEE},
@@ -970,13 +976,14 @@
 }
 
 @article{kotsiantis2007,
-  author =        {Kotsiantis, SB},
+  author =        {Kotsiantis, S.B.},
   journal =       {Informatica},
   number =        {3},
   title =         {Supervised Machine Learning: A Review of
                    Classification Techniques},
   volume =        {31},
   year =          {2007},
+  pages =           {249--268},
 }
 
 @article{ahn2008,
@@ -1056,10 +1063,11 @@
                    Liu, Chao},
   booktitle =     {Proceedings of the Sixth International AAAI
                    Conference on Weblogs and Social Media},
-  organization =  {AAAI},
+  organization =  {Association for the Advancement of Artificial Intelligence},
   title =         {A Supervised Approach to Predict Company Acquisition
                    with Factual and Topic Features Using Profiles and
                    News Articles on TechCrunch.},
   year =          {2012},
+  pages =         {607--610},
 }
 
