--- a/submissions/thesis-original/tables/design/statistics_classifier.tex
+++ b/submissions/thesis-original/tables/design/statistics_classifier.tex
@@ -1,15 +1,15 @@
 \begin{tabular}{lrrrrrrrrrr}
 \toprule
 {} & \multicolumn{2}{c}{AUC PRC}        & \multicolumn{2}{c}{AUC ROC}        &     \multicolumn{2}{c}{F1}       &    \multicolumn{2}{c}{MCC}        & \multicolumn{2}{c}{Fit Time (s)}         \\
-{Classifier} &    50th &    Max &    50th &    Max &   50th &    Max &   50th &    Max &         50th &     75th \\
+{Classifier} &    Median &    Max &    Median &    Max &   Median &    Max &   Median &    Max &         Median &     75th \\
 \midrule
-Logistic Regression       &   0.417 &  0.465 &   0.675 &  0.710 &  0.339 &  0.358 &  0.255 &  0.288 &        7.3 &  412.7 \\
-Random Forest             &   0.376 &  0.465 &   0.619 &  0.709 &  0.332 &  0.360 &  0.271 &  0.288 &       68.3 &   69.0 \\
-Decision Tree             &   0.388 &  0.429 &   0.651 &  0.659 &  0.305 &  0.314 &  0.212 &  0.224 &       15.3 &   16.8 \\
-Naive Bayes               &   0.354 &  0.367 &   0.623 &  0.638 &  0.303 &  0.321 &  0.212 &  0.239 &        8.6 &   26.8 \\
-K-Nearest Neighbors       &   0.335 &  0.353 &   0.532 &  0.565 &  0.131 &  0.226 &  0.137 &  0.210 &        8.5 &   20.8 \\
-Artificial Neural Network &   0.320 &  0.335 &   0.517 &  0.523 &  0.072 &  0.096 &  0.111 &  0.140 &        9.1 &   21.0 \\
-Support Vector Machine    &   0.233 &  0.244 &   0.503 &  0.504 &  0.014 &  0.017 &  0.038 &  0.045 &       29.0 &   29.0 \\
+LR       &   0.417 &  0.465 &   0.675 &  0.710 &  0.339 &  0.358 &  0.255 &  0.288 &        7.3 &  412.7 \\
+RF             &   0.376 &  0.465 &   0.619 &  0.709 &  0.332 &  0.360 &  0.271 &  0.288 &       68.3 &   69.0 \\
+DT             &   0.388 &  0.429 &   0.651 &  0.659 &  0.305 &  0.314 &  0.212 &  0.224 &       15.3 &   16.8 \\
+NB               &   0.354 &  0.367 &   0.623 &  0.638 &  0.303 &  0.321 &  0.212 &  0.239 &        8.6 &   26.8 \\
+KNN       &   0.335 &  0.353 &   0.532 &  0.565 &  0.131 &  0.226 &  0.137 &  0.210 &        8.5 &   20.8 \\
+ANN &   0.320 &  0.335 &   0.517 &  0.523 &  0.072 &  0.096 &  0.111 &  0.140 &        9.1 &   21.0 \\
+SVM    &   0.233 &  0.244 &   0.503 &  0.504 &  0.014 &  0.017 &  0.038 &  0.045 &       29.0 &   29.0 \\
 Total                     &   0.357 &  0.465 &   0.623 &  0.710 &  0.300 &  0.360 &  0.209 &  0.288 &       15.3 &   29.0 \\
 \bottomrule
 \end{tabular}
