--- a/submissions/thesis-original/tables/litreview/algorithms_evaluation.tex
+++ b/submissions/thesis-original/tables/litreview/algorithms_evaluation.tex
@@ -15,8 +15,8 @@
             & \multicolumn{2}{c}{6}
             & \multicolumn{2}{c}{\textbf{2}}
             & \multicolumn{2}{c}{\textbf{1}}
-            & \multicolumn{2}{c}{5}
-            & \multicolumn{2}{c}{7}
+            & \multicolumn{2}{c}{4}
+            & \multicolumn{2}{c}{6}
       \\
 \midrule
       \factor{Missing Values}
@@ -27,15 +27,6 @@
             & \cmark\cmark & \cite{strobl2009}
             & \cmark & \cite{kotsiantis2007}
             & \xmark & \cite{kotsiantis2007}
-      \\
-      \factor{Mixed Feature Types}
-            & \cmark\cmark & \cite{kotsiantis2007}
-            & \cmark\cmark & -
-            & \cmark\cmark & \cite{kotsiantis2007}
-            & \cmark\cmark & \cite{kotsiantis2007}
-            & \cmark & \cite{strobl2009}
-            & \cmark & \cite{kotsiantis2007}
-            & \cmark & \cite{kotsiantis2007}
       \\
       \factor{Irrelevant Features}
             & \xmark & \cite{kotsiantis2007}
@@ -59,11 +50,11 @@
 \type{Algorithm Properties}
             & \multicolumn{2}{c}{\textbf{2}}
             & \multicolumn{2}{c}{\textbf{1}}
-            & \multicolumn{2}{c}{5}
-            & \multicolumn{2}{c}{5}
+            & \multicolumn{2}{c}{4}
+            & \multicolumn{2}{c}{4}
             & \multicolumn{2}{c}{\textbf{2}}
-            & \multicolumn{2}{c}{5}
-            & \multicolumn{2}{c}{\textbf{2}}
+            & \multicolumn{2}{c}{6}
+            & \multicolumn{2}{c}{6}
       \\
 \midrule
       \factor{Predictive Power}
@@ -84,14 +75,14 @@
             & \xmark & \cite{kotsiantis2007}
             & \xmark & \cite{kotsiantis2007}
       \\
-      \factor{Incremental Learning}
+      \factor{Processing Speed} %TODO
             & \cmark\cmark & \cite{kotsiantis2007}
-            & \cmark\cmark & -
+            & \cmark\cmark & \cite{caruana2008}
             & \cmark\cmark & \cite{kotsiantis2007}
             & \cmark & \cite{kotsiantis2007}
-            & \cmark & -
-            & \cmark & \cite{kotsiantis2007}
-            & \cmark\cmark & \cite{kotsiantis2007}
+            & \cmark & \cite{caruana2008}
+            & \xmark  & \cite{kotsiantis2007}
+            & \xmark  & \cite{kotsiantis2007}
       \\
 \midrule
 \type{Overall}
@@ -101,7 +92,7 @@
             & \multicolumn{2}{c}{4}
             & \multicolumn{2}{c}{\textbf{1}}
             & \multicolumn{2}{c}{5}
-            & \multicolumn{2}{c}{6}
+            & \multicolumn{2}{c}{7}
       \\
 \bottomrule
 \end{tabular}
