--- a/submissions/thesis-original/tables/litreview/sources_summary.tex
+++ b/submissions/thesis-original/tables/litreview/sources_summary.tex
@@ -12,15 +12,15 @@
 \type{Features} \\
       \factor{Startup Potential} \\
             \group{Human Capital} \\
-                  Founders' Capabilities %DONE
+                  Founder Capabilities %DONE
                         & \cmark & \cmark
                         & \cmark\cmark & \xmark
                         & \xmark & \xmark \\
-                  NED Capabilities %DONE
+                  Advisor Capabilities %DONE
                         & \cmark & \cmark
                         & \cmark\cmark & \xmark
                         & \xmark & \xmark \\
-                  Staff Capabilities %DONE
+                  Executive Capabilities %DONE
                         & \cmark & \cmark
                         & \cmark\cmark & \xmark
                         & \xmark & \xmark \\
@@ -52,10 +52,6 @@
                         & \cmark\cmark & \cmark
                         & \xmark & \cmark
                         & \xmark & \xmark \\
-                  Awards and Grants
-                        & \cmark & \xmark
-                        & \xmark & \xmark
-                        & \xmark & \xmark \\
             \group{Historical Performance} \\
                   Financial Performance
                         & \xmark & \xmark
@@ -66,7 +62,7 @@
                         & \cmark & \xmark
                         & \xmark & \cmark \\
             \group{Contextual Cues} \\
-                  Competitor Performance
+                  Industry Performance
                         & \cmark & \cmark
                         & \xmark & \xmark
                         & \xmark & \xmark \\
