--- a/submissions/thesis-original/appendices/design/pipeline_hyperparameters.tex
+++ b/submissions/thesis-original/appendices/design/pipeline_hyperparameters.tex
@@ -1,5 +1,7 @@
-\chapter{Pipeline Hyper-parameters}
+\chapter{Pipeline Hyperparameters}
 \label{appendix:pipeline_hyperparameters}
+
+This appendix describes the search space of our system's pipeline optimisation process. The pipeline consists of an imputer, transformer, scaler, extractor and classifier in sequence. Each function has a number of hyperparameters that are either constant, iterables or distributions to be sampled.
 
 \newcommand{\one}[1]{\hspace{-2em}#1}
 \newcommand{\two}[1]{\hspace{-1em}#1}
