--- a/submissions/thesis-original/appendices/evaluation/clf_reports.tex
+++ b/submissions/thesis-original/appendices/evaluation/clf_reports.tex
@@ -1,31 +1,40 @@
 \chapter{Classification Reports}
 \label{appendix:classification_reports}
 
+This appendix outlines the classification reports for our various experiments.
+
 \begin{table}[!htb]
     \centering
     \scalebox{0.9}{\input{../tables/evaluation/clf_report_slice}}
-    \caption[Classification report by slice date]{Classification report by slice date.}
-    \label{fig:evaluation:clf_report_slice}
+    \caption[Classification report by training set date]{Classification report by training set date. Forecast Window: 2 years. Target Outcome: Extra Stage. Developmental Stages: All. Training Set Size: Full.}
+    \label{tab:evaluation:clf_report_slice}
+\end{table}
+
+\begin{table}[!htb]
+    \centering
+    \scalebox{0.9}{\input{../tables/evaluation/clf_report_size}}
+    \caption[Classification report by training set size]{Classification report by training set size. Forecast Window: 4 years. Target Outcome: Extra Stage. Developmental Stages: All. Training Set Dates: 2012-2014 (3)}
+    \label{tab:evaluation:clf_report_size}
 \end{table}
 
 \begin{table}[!htb]
     \centering
     \scalebox{0.9}{\input{../tables/evaluation/clf_report_window}}
-    \caption[Classification report by forecast window]{Classification report by forecast window.}
-    \label{fig:evaluation:clf_report_window}
+    \caption[Classification report by forecast window]{Classification report by forecast window. Target Outcome: Extra Stage. Developmental Stages: All. Training Set Size: Full. Training Set Dates: 2012-2014 (3)}
+    \label{tab:evaluation:clf_report_window}
 \end{table}
 
 \begin{table}[!htb]
     \centering
     \scalebox{0.9}{\input{../tables/evaluation/clf_report_stage}}
-    \caption[Classification report by developmental stage]{Classification report by developmental stage.}
-    \label{fig:evaluation:clf_report_stage}
+    \caption[Classification report by developmental stage]{Classification report by developmental stage. Forecast Window: 4 years. Target Outcome: Extra Stage. Training Set Dates: 2012-2014 (3). Training Set Size: Full}
+    \label{tab:evaluation:clf_report_stage}
 \end{table}
 
 \begin{table}[!htb]
     \centering
     \scalebox{0.9}{\input{../tables/evaluation/clf_report_outcome}}
-    \caption[Classification report by target outcome]{Classification report by target outcome.}
-    \label{fig:evaluation:clf_report_outcome}
+    \caption[Classification report by target outcome]{Classification report by target outcome. Forecast window: 4 years. Developmental Stages: All. Training Set Dates: 2012-2014 (3). Training Set Size: Full.}
+    \label{tab:evaluation:clf_report_outcome}
 \end{table}
 
