--- a/submissions/thesis-original/figures/design/framework_details.tex
+++ b/submissions/thesis-original/figures/design/framework_details.tex
@@ -20,8 +20,7 @@
             [Executive Capabilities]
         ]
         [Social\\Capital,
-            [Social Media]
-            [Events Influence]
+            [Social Influence]
             [Strategic Alliances]
         ]
         [Structural\\Capital,
