--- a/submissions/thesis-original/thesis/thesis.tex
+++ b/submissions/thesis-original/thesis/thesis.tex
@@ -94,7 +94,7 @@
   \setunit{\addcomma\space}%
   \printfield{eid}}
 
-\DeclareFieldFormat{pages}{#1} % no prefix for the `pages` field
+%\DeclareFieldFormat{pages}{#1} % no prefix for the `pages` field
 
 \renewbibmacro*{publisher+location+date}{%
   \printlist{publisher}%
@@ -131,6 +131,7 @@
 \newacronym{auc}{AUC}{Area Under Curve}
 \newacronym{mcc}{MCC}{Matthews Correlation Coefficient}
 \newacronym{irr}{IRR}{Internal Rate of Return}
+\newacronym{sql}{SQL}{Structured Query Language}
 
 % Fancyref support for subsections, source; https://github.com/openlilylib/tutorials/blob/master/aGervasoni/orchestralScores/example-materials/OLLbase.sty
 \newcommand*{\fancyrefsubseclabelprefix}{subsec}
@@ -203,27 +204,23 @@
 
 \begin{abstract}
 
-Venture Capital (VC) firms face the challenge of identifying a few outstanding investments from a sea of opportunities. The VC industry requires better systems to manage labour-intensive tasks like investment screening. Previous approaches to improve VC investment screening have common limitations: small, private datasets, a focus on early-stage investment, and basic feature sets. To address these limitations, a multi-stage VC investment screening system is presented. The core of the system is an optimisation process that generates a supervised learning classifier which is applied to data collected from large, public online databases (CrunchBase and PatentsView). The system is evaluated against three criteria: practicality, robustness, and versatility. The system satisfies each of these criteria. The system is practical in that it is near-autonomous. The system is robust in that it has only minimal variance in performance when trained on historical datasets. Finally, the system is versatile in that it addresses a large domain of investment prediction tasks with respect to forecast window, developmental stage and target outcome. This project also contributes a comprehensive empirical study of startup performance. The prior experience of a startup's advisors, executives and founders is found to be the greatest predictor of startup performance. Ultimately, this project makes steps towards automation in the VC industry.
+Venture Capital (VC) firms face the challenge of identifying a few outstanding investments from a sea of opportunities. The VC industry requires better systems to manage labour-intensive tasks like investment screening. Previous approaches to improve VC investment screening have common limitations: small, private datasets, a focus on early-stage investment, and narrow feature sets. To address these limitations, we present a multi-stage VC investment screening system. The system generates an optimised supervised learning classifier which it applies to data collected from large, public online databases (CrunchBase and PatentsView). We evaluate the system against three criteria: practicality, robustness, and versatility. The system satisfies each of these criteria. The system is practical in that it is near-autonomous. The system is robust in that it has only minimal variance in performance when trained on historical datasets. Finally, the system is versatile in that it addresses a large domain of investment prediction tasks with respect to forecast window, developmental stage and target outcome. This project also contributes a comprehensive empirical study of startup performance. The prior experiences of a startup's advisors, executives and founders are found to be the greatest predictors of startup performance. Ultimately, this project makes significant steps towards automation in the VC industry.
 
 \end{abstract}
 
 \begin{acknowledgements}
 
-\begin{comment}
+First and foremost I would like to thank my supervisors, Melinda Hodkiewicz and Tim French. Melinda and Tim are both fantastic academics and educators, and their strengths and talents perfectly complemented each other on this project. I am extremely grateful for Melinda and Tim's meticulous feedback and advice throughout the course of this year.
 
-First and foremost I would like to thank my supervisors, Melinda Hodkiewicz and Tim French. Melinda and Tim are both fantastic academics and educators in their own right, and their strengths and talents perfectly complemented each other on this project. I am extremely grateful for Melinda and Tim's meticulous feedback and advice throughout the course of this year.
+My time at university has been an incredible educational experience, and I primarily credit that to opportunities afforded to me by The University of Western Australia, the Fogarty Foundation, and St Catherine's College.
 
-My time at university has been an amazing educational experience and I primarily credit that to opportunities afforded to me by the The University of Western Australia, the Fogarty Foundation, and St Catherine's College.
-
-I would like to thank The University of Western Australia for guiding me through my, admittedly unorthodox, degree. Starting in Biomedical Sciences, I never imagined I would go on to complete a Double Major in Psychology and finally Honours in Computer Science. In particular, I'd like to acknowledge the fantastic Bachelor of Philosophy (Hons) program, and Kathy Sanders and Jenna Mead for their advice and support.
+I would like to thank The University of Western Australia for guiding me through my, admittedly unusual, degree. Starting in Biomedical Sciences, I never imagined I would go on to complete a Double Major in Psychology and finally Honours in Computer Science. In particular, I would like to acknowledge the fantastic Bachelor of Philosophy (Honours) program, and Kathy Sanders and Jenna Mead for their advice and support.
 
 I would like to thank the Fogarty Foundation. The Fogarty Foundation has provided support to me far beyond my UWA Fogarty Foundation Scholarship. The Fogarty Foundation was the catalyst that led to my involvement in Teach Learn Grow, encouraged me to start Bloom, and took me to Stanford University. In particular, I'd like to acknowledge Robyn King, Kathryn Clements, and Annie Fogarty for their incredible support throughout my degree.
 
-I would like to thank St Catherine's College. In particular, Fiona Crowe and Mandy McFarland, who are truly inspiring leaders that have backed myself and Bloom 110\%. St Catherine's College is my extended family and I am incredibly grateful for their support.
+I would like to thank St Catherine's College. In particular, Fiona Crowe and Mandy McFarland, who are truly inspiring leaders that have backed me and Bloom 110\%. St Catherine's College is my extended family, and I am incredibly grateful for their support.
 
 Finally, I would like to thank my friends and family who encouraged and supported me throughout my time at university.
-
-\end{comment}
 
 \end{acknowledgements}
 
